Added algorithm to reduce tree to the 8 standard taxonomic ranks.